%% Build and check from R:
%% news(db = tools:::.build_news_db_from_package_NEWS_Rd("<Matrix>/inst/NEWS.Rd"))
\name{NEWS}
\title{News for \R{} Package \pkg{Matrix}}
\encoding{UTF-8}
\newcommand{\MPR}{\pkg{Matrix} \href{https://R-forge.R-project.org/tracker/index.php?func=detail&aid=#1&group_id=61&atid=294}{PR##1}}
\section{Changes in version 1.7-2 (2025-01-20, svn r5115)}{
  \subsection{Installation}{
    \itemize{
      \item \pkg{Matrix} can be installed with parallel \command{bmake}.
      Thanks to Sebastian Meyer for the report and patch in \MPR{6861}.
    }
  }
  \subsection{Misc}{
    \itemize{
      \item Test in \file{tests/matprod.R} comparing
      \code{t(x) \%*\% x} and \code{crossprod(x)} is amended to tolerate
      small numerical differences seen under \samp{aarch64} Linux.
    }
  }
}

\section{Changes in version 1.7-1 (2024-10-17, svn r4948)}{
  \subsection{Installation}{
    \itemize{
      \item Installation under architecture-specific builds of \R{}
      works again.  It was broken in \pkg{Matrix} version 1.7-0,
      where changes to \file{src/Makevars} resulted in \env{CPPFLAGS}
      not including \option{-I"${R_INCLUDE_DIR}${R_ARCH}"}.
    }
  }
  \subsection{SuiteSparse}{
    \itemize{
      \item Internal SuiteSparse and METIS library sources are patched
      to avoid possible use of illegal entry points.
    }
  }
  \subsection{C-Level API}{
    \itemize{
      \item Registered routine \code{sexp_as_cholmod_factor} no longer
      calls \code{cholmod_check_factor} before returning, leaving the
      decision to check to the caller.  Accordingly, most
      \code{cholmod_check_*} are registered; packages wanting to use
      them need \code{LinkingTo: Matrix (>= 1.7-1)}.
    }
  }
  \subsection{Misc}{
    \itemize{
      \item Non-API entry points \code{OBJECT}, \code{IS_S4_OBJECT},
      \code{SET_OBJECT}, \code{ATTRIB}, and \code{SET_ATTRIB} are no
      longer used.
    }
  }
}
