@@ -1,7 +1,7 @@
 Package: Matrix
-Version: 1.7-2
+Version: 1.7-3
 VersionNote: do also bump src/version.h, inst/include/Matrix/version.h
-Date: 2025-01-20
+Date: 2025-02-23
 Priority: recommended
 Title: Sparse and Dense Matrix Classes and Methods
 Description: A rich hierarchy of sparse and dense matrix classes,
