@@ -2,10 +2,10 @@
 #define MATRIX_VERSION_H
 
 /* (version)_{10} = (major minor patch)_{256} */
-#define MATRIX_PACKAGE_VERSION 67330
+#define MATRIX_PACKAGE_VERSION 67331
 #define MATRIX_PACKAGE_MAJOR 1
 #define MATRIX_PACKAGE_MINOR 7
-#define MATRIX_PACKAGE_PATCH 2
+#define MATRIX_PACKAGE_PATCH 3
 
 #define MATRIX_ABI_VERSION 2
 
